<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        style="@style/ButtonStyle"
        android:text="@string/create" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAttempt"
        style="@style/ButtonStyle"
        android:text="@string/attempt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResult"
        style="@style/ButtonStyle"
        android:text="@string/result" />

</LinearLayout>